<resources>
    <string name="app_name">Una Rueda</string>
    <string name="brightness_label">Brightness</string>
    <string name="animation_speed_label">Animation Delay</string>
    <string name="enable_label">Enable</string>
    <string name="more_colors_label">More Colors</string>
    <string name="rgb_blending_label">RGB Blending</string>
    <string name="title_choose_start_color">Choose Start Color</string>
    <string name="title_choose_end_color">Choose End Color</string>
    <string name="button_ok">ok</string>
    <string name="button_cancel">cancel</string>
    <string name="connect_label">Connect</string>
    <string name="disconnect_label">Disconnect</string>
    <string name="auto_connect_label">Auto connect</string>
</resources>